--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -64,6 +64,50 @@
 
     <footer class="TheBase">
 
+        <div class="Contenedor-footer">
+
+            <div class="Contenedor-NombrePaginaFooter">
+                <h3 class="titulobase t-footer">D<span class="letraB">B</span>ox</a></h3>
+                <!-- <a href="{{url_for('DBox.main')}}" class="titulobase">D<span class="letraB">B</span>ox</a> -->
+            </div>
+
+            <div class="Contenedor-DatosImportantes">
+
+                <div class="CreadoPor">
+                    <h3>Creado por:</h3>
+                    <p>Diego Sánchez</p>
+                </div>
+
+                <div class="TecnologiasEmpleadas">
+                    <h3>Tecnologias Empleadas:</h3>
+                    <div class="Tecnologias">
+
+                        <img src="../static/imagenes/imagenesFooter/Python.png" alt="" width="50" height="50">
+                        <img src="../static/imagenes/imagenesFooter/Flask.png" alt="" width="50" height="50">
+                        <img src="../static/imagenes/imagenesFooter/Mysql.png" alt="" width="50" height="50">
+                        <img src="../static/imagenes/imagenesFooter/Html.png" alt="" width="50" height="50">
+                        <img src="../static/imagenes/imagenesFooter/Css.png" alt="" width="50" height="50">
+                        <img src="../static/imagenes/imagenesFooter/Js.png" alt="" width="50" height="50">
+
+                    </div>
+                </div>
+
+                <div class="RedesSociales">
+                    <h3>Sígueme:</h3>
+                    <div class="Redes">
+
+                        <a href="https://www.instagram.com/diegosanchez425/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.linkedin.com/in/diego-alejandro-s%C3%A1nchez-ruiz-5653b1259/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/dieg546"><i class="fa-brands fa-github"></i></a>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
