--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -82,12 +82,12 @@
                     <h3>Tecnologias Empleadas:</h3>
                     <div class="Tecnologias">
 
-                        <img src="../static/imagenes/imagenesFooter/Python.png" alt="" width="50" height="50">
-                        <img src="../static/imagenes/imagenesFooter/Flask.png" alt="" width="50" height="50">
-                        <img src="../static/imagenes/imagenesFooter/Mysql.png" alt="" width="50" height="50">
-                        <img src="../static/imagenes/imagenesFooter/Html.png" alt="" width="50" height="50">
-                        <img src="../static/imagenes/imagenesFooter/Css.png" alt="" width="50" height="50">
-                        <img src="../static/imagenes/imagenesFooter/Js.png" alt="" width="50" height="50">
+                        <img src="{{url_for('static',filename='imagenes/imagenesFooter/Python.png')}}" alt="" width="50" height="50">
+                        <img src="{{url_for('static',filename='imagenes/imagenesFooter/Flask.png')}}" alt="" width="50" height="50">
+                        <img src="{{url_for('static',filename='imagenes/imagenesFooter/Mysql.png')}}" alt="" width="50" height="50">
+                        <img src="{{url_for('static',filename='imagenes/imagenesFooter/Html.png')}}" alt="" width="50" height="50">
+                        <img src="{{url_for('static',filename='imagenes/imagenesFooter/Css.png')}}" alt="" width="50" height="50">
+                        <img src="{{url_for('static',filename='imagenes/imagenesFooter/Js.png')}}" alt="" width="50" height="50">
 
                     </div>
                 </div>
