--- a/app/templates/main/producto.html
+++ b/app/templates/main/producto.html
@@ -53,8 +53,14 @@
                     <div class="infoProducto">
 
                         <div class="Overflow-producto">
-                            <h3><strong>{{productos['producto']}}</strong></h3>
-                        </div>
+
+
+                            <div class="Titulo-Producto" style="width: auto;">
+                                <h3><strong>{{productos['producto']}}</strong></h3>
+                            </div>
+
+                            
+                        </div> 
                         
                         <p class="precioProducto">USD {{productos['precio']}}$</p>
                         <!-- <p>Estado: idk</p> -->
