Modificanto elementos del carrito y agregando una nueva carpeta para el orden de mis archivos .html y creacion de un nuevo html del admin

--- a/app/templates/Administration/AgregarProducto.html
+++ b/app/templates/Administration/AgregarProducto.html
@@ -56,8 +56,10 @@
 
                 </div>
 
-            </div>
+                <a href="{{url_for('Admin.Visualizar_productos')}}">Visualizar produtos</a>    
 
+            </div>
+            
         </div>
 
     {%endblock%}
