--- a/app/templates/main/buscador.html
+++ b/app/templates/main/buscador.html
@@ -16,11 +16,11 @@
 
         <div class="content">
 
-            <div class="relative-indexmain">
+            <!-- <div class="relative-indexmain">
                 <div class="absoluto-indexmain">
                     {{Total}}
                 </div>
-            </div>
+            </div> -->
 
             <h1 class="tituloBuscador">Buscar Producto</h1>
         
