--- a/app/templates/main/carrito.html
+++ b/app/templates/main/carrito.html
@@ -14,11 +14,11 @@
         <!-- {% set myList=[]%} -->
         <div class="content">
 
-            <div class="relative-indexmain">
+            <!-- <div class="relative-indexmain">
                 <div class="absoluto-indexmain">
                     {{Total}}
                 </div>
-            </div>
+            </div> -->
 
             <h1 class="carritoTitulo"><strong>Carrito de compras</strong></h1>
 
