--- a/app/templates/main/indexmain.html
+++ b/app/templates/main/indexmain.html
@@ -14,11 +14,11 @@
  
         <div class="content">  
 
-            <div class="relative-indexmain">
+            <!-- <div class="relative-indexmain">
                 <div class="absoluto-indexmain">
                     {{Total}}
                 </div>
-            </div>
+            </div> -->
             
 
             <!-- <p></p> -->
