--- a/app/templates/main/producto.html
+++ b/app/templates/main/producto.html
@@ -12,11 +12,11 @@
 
         <div class="content"> 
 
-            <div class="relative-indexmain">
+            <!-- <div class="relative-indexmain">
                 <div class="absoluto-indexmain">
                     {{Total}}
                 </div>
-            </div>
+            </div> -->
             <!-- <h1>Vale, este es un pequeño paso.</h1> --> 
 
             {%for category,message in get_flashed_messages(with_categories=true)%}  
