--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -61,6 +61,30 @@ body{
     
 }
 
+.Carrito-Productos{
+
+    position: relative;
+    display: flex;  
+    align-items: center;
+    justify-content: center;
+
+}
+
+.Cantidad-Absolute{
+
+    position: absolute;
+    background-color: #007bff;
+    text-align: center;
+    width: 24px;
+    border-radius: 100px;
+    color: white;
+    top: -32%;
+    left: 94%;
+    height: 20px;
+    line-height: 20px;
+
+}
+
 .enlaceBase{
 
     text-decoration: none;
@@ -96,6 +120,7 @@ body{
     width: 80%;
     min-height: 100vh;
     margin: auto;
+    margin-top: 20px;
 }
 
 .presentacionInicio{
@@ -562,7 +587,7 @@ h1{
 /* -------------------------indexmain.html-------------------------- */
 
 
-.relative-indexmain{
+/* .relative-indexmain{
 
     position: relative;
     display: flex;
@@ -583,9 +608,8 @@ h1{
     text-align: center;
     background-color: #007bff;
     top: -124%;
-    /* left: 1537%; */
 
-}
+} */
 
 
 /* ----------------------buscador.html------------------------ */
@@ -1403,6 +1427,7 @@ input[type="checkbox"]{
 
     width: 100%;
     display: flex;
+    flex-direction: column;
     height: 850px;
     align-items: center;
     justify-content: center;
