--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,11 +38,20 @@
                 
                 {%if g.user_logged['id']==1%}
 
-                    <a href="{{url_for('Admin.Agregar')}}" class="enlaceBase" title="Agregar producto"><i class="fa-regular fa-square-plus" style="font-size: 25px;"></i></a>
+                    <a href="{{url_for('Admin.Agregar')}}" class="enlaceBase" title="Admin"><i class="fa-solid fa-users-gear" style="font-size: 25px;"></i></a>
 
                 {%endif%}
 
-                <a href="{{url_for('DBox.carrito')}}" class="enlaceBase" title="Carrito de compras"><i class="fa-solid fa-cart-shopping" style="font-size: 25px;"></i></a>
+
+                <div class="Carrito-Productos">
+                    <a href="{{url_for('DBox.carrito')}}" class="enlaceBase" title="Carrito de compras"><i class="fa-solid fa-cart-shopping" style="font-size: 25px;"></i></a>
+
+                    <div class="Cantidad-Absolute">
+                        {{g.user_logged['productos_carrito']}}
+                    </div>
+                    
+                </div>
+
                 <a href="{{url_for('InicioDBox.logout')}}" class="enlaceBase" title="Cerrar sesión"><i class="fa-solid fa-arrow-right-from-bracket" style="font-size: 25px;"></i></a>
 
             {%else%}
