--- a/app/static/css/MediaQuery.css
+++ b/app/static/css/MediaQuery.css
@@ -13,6 +13,12 @@
 
 @media (max-width:1250px) {
     
+    .content{
+
+        margin-top: 90px;
+
+    }
+
     .login-registro h1{
 
         font-size: 32px;
