--- a/app/templates/Administration/AgregarProducto.html
+++ b/app/templates/Administration/AgregarProducto.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-
+ 
     {%block content%}
 
         <!-- <h1>Hola admin, vamos bien :3</h1>
@@ -18,7 +18,9 @@
 
             <div class="Contenedor-AgregarProducto">
 
-                <div class="DatosProducto-AgregarProducto">
+                <h1>Agregar producto a D<span class="letraB">B</span>ox</h1>
+
+                <div class="DatosProducto-AgregarProducto" id="Contenedor-AgregarProductoId">
 
                     <form action="" method="post" id="Form-AgregarProducto" enctype="multipart/form-data">
 
@@ -47,6 +49,16 @@
                             
                             <input type="file" accept="image/jpeg" name="archivo" class="archivo-AgregarProducto" id="archivo">
                             
+                            <div class="Flex-ImagenPrev">
+
+                                <div id="Contenedor-ImagenPre" id="ImagenPre">
+                                    <img src="" alt="" width="150" height="150" id="ImagenPre">
+                                </div>
+
+                            </div>
+
+                            
+
                             <button type="button" id="Boton-AgregarProducto">Agregar Productos</button>
                             <!-- <input type="submit" value="Agregar Producto"> -->
 
@@ -56,7 +68,7 @@
 
                 </div>
 
-                <a href="{{url_for('Admin.Visualizar_productos')}}">Visualizar produtos</a>    
+                <!-- <a href="{{url_for('Admin.Visualizar_productos')}}">Visualizar produtos</a>     -->
 
             </div>
             
