--- a/app/templates/Administration/AgregarProducto.html
+++ b/app/templates/Administration/AgregarProducto.html
@@ -73,7 +73,7 @@
             </div>
             
         </div>
-
+        <script src="{{url_for('static',filename='js/AgregarProducto.js')}}"></script>
     {%endblock%}
 </body>
 </html>
