--- a/app/templates/main/Pago.html
+++ b/app/templates/main/Pago.html
@@ -148,7 +148,7 @@
 
         </div>
 
-        <script src="{{url_for('static',filename='js/FlaskJS.js')}}"></script>
+        <script src="{{url_for('static',filename='js/ProcesoPago.js')}}"></script>
 
     {%endblock%}
 </body>
