--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1464,7 +1464,7 @@ input[type="checkbox"]{
 .DatosProducto-AgregarProducto{
 
     width: 40%;
-    height: 500px;
+    height: 520px;
     background-color: white;
     border-radius: 6px;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, .8);
@@ -1520,6 +1520,7 @@ input[type="file"]{
     color: white;
     border-radius: 5px 0px 0px 5px;
     cursor: pointer;
+    font-size: 14px;
 }
 
 /* .LabelImagen-AgregarProducto:h */
@@ -1544,6 +1545,17 @@ input[type="file"]{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+
+}
+
+#Boton-AgregarProducto{
+
+
+    background-color: #007bff;
+    border-radius: 6px;
+    height: 50px;
+    color: white;
+    border: 1px solid rgba(0, 0, 0, .4);
 
 }
 
